// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`attached results analytics actions > when analyticsMode is \`next\` > logCaseAttach > should call relay.emit properly 1`] = `
[
  "InsightPanel.ItemAction",
  {
    "action": "attach",
    "context": {
      "caseNumber": "5678",
      "targetId": "1234",
      "targetType": "Case",
    },
    "itemMetadata": {
      "author": "example author",
      "title": "example documentTitle",
      "uniqueFieldName": "permanentid",
      "uniqueFieldValue": "example contentIDValue",
      "url": "example documentUri",
    },
    "position": 1,
    "responseId": "example searchUid",
  },
]
`;

exports[`attached results analytics actions > when analyticsMode is \`next\` > logCaseDetach > should call relay.emit properly 1`] = `
[
  "InsightPanel.DetachItem",
  {
    "context": {
      "caseNumber": "5678",
      "targetId": "1234",
      "targetType": "Case",
    },
    "itemMetadata": {
      "author": "example author",
      "title": "example documentTitle",
      "uniqueFieldName": "permanentid",
      "uniqueFieldValue": "example contentIDValue",
      "url": "example documentUri",
    },
  },
]
`;
